--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "dev-server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "new:version": "npm publish --access public",
+    "patch": "npm version patch"
   },
   "repository": {
     "type": "git",
