--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
   },
   "homepage": "https://github.com/NotVeryWellF/dev-server#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "@notverywellc/templates": "0.0.2",
+    "express": "^4.17.1",
+    "@types/express": "^4.17.13",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.3",
+    "webpack": "^5.55.1",
+    "webpack-dev-middleware": "^5.2.1"
   }
 }
